nixidy/generated/prod/jellyfin/Deployment-jellyfin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    reloader.stakater.com/auto: "true"
  labels:
    app.kubernetes.io/controller: jellyfin
    app.kubernetes.io/instance: jellyfin
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: jellyfin
  name: jellyfin
  namespace: media
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/controller: jellyfin
      app.kubernetes.io/instance: jellyfin
      app.kubernetes.io/name: jellyfin
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/controller: jellyfin
        app.kubernetes.io/instance: jellyfin
        app.kubernetes.io/name: jellyfin
    spec:
      automountServiceAccountToken: false
      containers:
        - image: ghcr.io/jellyfin/jellyfin:10.11.6@sha256:25db4eb10143c1c12adb79ed978e31d94fc98dc499fbae2d38b2c935089ced3e
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 10
            tcpSocket:
              port: 8096
            timeoutSeconds: 1
          name: jellyfin
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 10
            tcpSocket:
              port: 8096
            timeoutSeconds: 1
          startupProbe:
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 10
            tcpSocket:
              port: 8096
            timeoutSeconds: 1
          volumeMounts:
            - mountPath: /config/metadata
              name: cache
            - mountPath: /config
              name: config
            - mountPath: /media/audiobooks
              name: media-audiobooks
              readOnly: true
            - mountPath: /media/books
              name: media-books
              readOnly: true
            - mountPath: /media/comics
              name: media-comics
              readOnly: true
            - mountPath: /media/dvd
              name: media-dvd
              readOnly: true
            - mountPath: /media/movies
              name: media-movies
              readOnly: true
            - mountPath: /media/music
              name: media-music
              readOnly: true
            - mountPath: /media/tv
              name: media-tv
              readOnly: true
            - mountPath: /cache
              name: tmpfs
              subPath: cache
            - mountPath: /config/log
              name: tmpfs
              subPath: log
            - mountPath: /tmp
              name: tmpfs
              subPath: tmp
      dnsPolicy: ClusterFirst
      enableServiceLinks: false
      hostIPC: false
      hostNetwork: false
      hostPID: false
      serviceAccountName: jellyfin
      volumes:
        - name: cache
          persistentVolumeClaim:
            claimName: jellyfin-cache
        - name: config
          persistentVolumeClaim:
            claimName: jellyfin-config
        - name: media-audiobooks
          persistentVolumeClaim:
            claimName: media-audiobooks
        - name: media-books
          persistentVolumeClaim:
            claimName: media-books
        - name: media-comics
          persistentVolumeClaim:
            claimName: media-comics
        - name: media-dvd
          persistentVolumeClaim:
            claimName: media-dvd
        - name: media-movies
          persistentVolumeClaim:
            claimName: media-movies
        - name: media-music
          persistentVolumeClaim:
            claimName: media-music
        - name: media-tv
          persistentVolumeClaim:
            claimName: media-tv
        - emptyDir: {}
          name: tmpfs
